# PuzzleBotNav

./: .gitignore
.github/workflows/: ci.yaml
src/mobile_robotics/: odometry_node.py  package.xml  setup.py
src/mobile_robotics/launch/: full_navigation.launch.py  move_forward.launch.py  path_generator.launch.py
src/mobile_robotics/mobile_robotics/: controller_node.py  move_forward_distance.py  odometry_node.py  path_generator.py  square_path_fsm.py
src/mobile_robotics/params/: controller_params.yaml  odometry_params.yaml  path_params.yaml  path_params1.yaml
src/motor_control/launch/: motor_launch.py
src/motor_control/motor_control/: controller.py
src/pid_control/: package.xml  setup.py
src/pid_control/firmware/: sp32_control_node.ino
src/pid_control/launch/: pid_control_launch.py  pid_control_launch_ns.py
src/signal_processing/: package.xml  setup.py
src/signal_processing/launch/: launch.py
src/signal_processing/signal_processing/: signal_generator.py  singal_processor.py
