<?xml version="1.0"?>
<package format="3">
  <name>mobile_robotics</name>
  <version>0.0.0</version>
  <description>
    Nodos de navegación para PuzzleBot usando Odometry y publicación de tiempo estimado.
  </description>
  <maintainer email="arturo@todo.todo">arturo</maintainer>
  <license>Apache-2.0</license>

  <!-- Herramienta de build para paquetes Python -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencias de tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <!-- Indica que este paquete se construye con setuptools/ament_python -->
    <build_type>ament_python</build_type>
  </export>
</package>
